--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: wayfarer
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Awesome way to handle Awesome Lists
 Version: 0.1.0
 Author: Krzysztof Joachimiak
 Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: This package facilitates fetching whole Awesome List, info about particular Github repos etc.
 License: MIT
 Encoding: UTF-8
 LazyData: true
