--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Awesome way to handle Awesome Lists
 Version: 0.1.0
 Author: Krzysztof Joachimiak
-Maintainer: The package maintainer <yourself@somewhere.net>
+Maintainer: Krzysztof Joachimiak <joachimiak.krzysztof@gmail.com>
 Description: This package facilitates fetching whole Awesome List, info about particular Github repos etc.
 License: MIT
 Encoding: UTF-8
